# AIASys

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  dev.sh  lefthook.yml  package.json
.github/: CODEOWNERS  (+1 more)
apps/backend/: .gitignore  README.md  config.example.toml  pyproject.toml
apps/backend/agent_runtime_helpers/: db_helper.py  font_helper.py
apps/backend/app/: main.py
apps/backend/app/agents/: __init__.py
apps/backend/app/capabilities/: manager.py  source_registry.py
apps/backend/app/core/: agent_tool.py  aiasys_config.py  config.py  database.py  default_config.toml  encoding_utils.py  port_utils.py  runtime_storage_config.py  sqlite_vec.py  subprocess_utils.py  templates.py  tool_result.py  uv_utils.py  vendor_binaries.py
apps/backend/app/document_extraction/: service.py
apps/backend/app/graphrag/: llm_adapter.py  service.py
apps/backend/app/knowledge/: sqlite_kb_service.py
apps/backend/app/mcp/: manager.py
apps/backend/app/models/: external_mcp_market.py  llm_provider.py  mcp.py  runtime_environment.py  session.py  workspace.py
apps/backend/app/services/: canvas_file_service.py  capability_catalog.py  capability_registry.py  claw_runtime.py  container_resource.py  data_table_service.py  diff_service.py  file_history.py  file_initializer.py  file_tree_config.py  folder_import.py  mcp_external_market_service.py  node_runtime.py  runtime_environment.py  runtime_storage_settings.py  runtime_tooling.py  shell_environment.py  shell_executor.py  skill_external_market_service.py  task_resource_context.py  template_external_market_service.py  workspace_registry.py
apps/backend/app/skills/: manager.py  models.py  skill_discovery.py  skill_enablement.py  skill_import.py
apps/backend/app/storage/: llm_provider_storage.py
apps/backend/app/utils/: file_utils.py  ids.py  llm_url_validator.py  path_utils.py  shell_safety.py
apps/backend/docs/: api.md  authentication.md  llm_config.md
apps/backend/scripts/: download_vendor_binaries.py  init_resource_db_test_assets.py  reset_example_workspaces.py
apps/backend/tests/: conftest.py  test_acp_client_session.py  test_agent_config_runtime_overrides.py  test_agent_config_service.py  test_agent_config_session_overrides.py  test_agent_config_tool_sanitization.py  test_agent_environment_resolution.py  test_agent_message_content.py  test_agent_model_capabilities.py  test_agent_model_selection.py  test_aiasys_llm_clients.py  test_aiasys_runtime_backend.py  test_api_router_runtime_database.py  test_ask_user_routes.py  test_ask_user_tool.py  test_auto_task_executor.py  test_auto_tasks_routes.py  test_canvas_file_service.py  test_canvas_skill_scripts.py  test_capability_authorization.py  test_capability_confirmation_manager.py  test_capability_manager.py  test_capability_registry_service.py  test_channel_claw_runtime.py  test_claw_runtime_manager.py  test_claw_service.py  test_compaction.py  test_config_example.py  test_container_resource_service.py  test_database_access_broker.py  test_database_connector_service.py  test_db_helper.py  test_env_vars_tool.py  test_execution_flow_route.py  test_execution_journal_support.py  test_execution_resource_group.py  test_expert_crud_routes.py  test_expert_policy_routes.py  test_expert_tools.py  test_file_tools.py  (+91 more)
(+665 files in other folders)
