[project]
name = "aiasys-backend"
version = "0.4.18"
description = "AIASys agent backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # MCP
    "fastmcp>=0.4.0",
    # Web Framework
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.1.2",
    "python-multipart>=0.0.21",
    # Data Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    # Docker Sandbox
    "docker>=7.1.0",
    "filelock>=3.24.3",
    # HTTP Client
    "aiohttp>=3.9.0,<4",
    "httpx[socks]>=0.28.1",
    "requests>=2.32.5",
    "jinja2>=3.1.6",
    "jieba>=0.42.1",
    # LLM SDKs
    "openai>=2.37.0,<3",
    "anthropic>=0.39.0,<1",
    # Environment
    "python-dotenv>=1.2.1",
    "PyYAML>=6.0.3",
    "tomli-w>=1.2.0",
    # Scheduler
    "croniter>=3.0.0",
    # Authentication
    "pyjwt>=2.8.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    # Database
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    # Data Processing (Core only)
    "pandas>=2.3.3",
    "numpy>=1.24.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.6.1",
    "editdistance>=0.8.1",
    # Notebook / local Python execution
    "pip>=24.0",
    "jupyter-client>=8.8.0",
    "ipykernel>=7.2.0",
    # Built-in document extraction
    "pypdf>=5.0.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    # DuckDB SQLAlchemy dialect
    "duckdb-engine>=0.17.0",
    "duckdb>=1.4.4",
    # External relational databases
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.1",
    # Logging
    "loguru>=0.5.3,<0.6.1",
    "authlib>=1.6.8",
    "itsdangerous>=2.2.0",
    "websockets>=15.0.1",
    "lark-oapi>=1.5.3",
    "bcrypt>=5.0.0",
    # Windows PTY support
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Document extraction
docling = ["docling>=2.77.0"]
# Knowledge graph (GraphRAG)
graph = ["graspologic>=3.4.4", "redis>=7.3.0"]
# Convenience: all optional dependencies
all = [
    "docling>=2.77.0",
    "graspologic>=3.4.4",
    "redis>=7.3.0",
]
[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.25.3,<1.0.0",
]

[tool.uv.sources]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

# Tool configurations
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import order)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_errors = false
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
